--- a/marketangular/src/app/browse/browse.component.html
+++ b/marketangular/src/app/browse/browse.component.html
@@ -1,3 +1,28 @@
-<p>
-  browse works!
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bicycle Marketplace</title>
+</head>
+<body>  
+  <a href="/browse">Browse </a> | <a href="/listings">My Listings </a> | 
+  <input (click)='Logoff()' type="submit" value="logoff">
+  <fieldset>
+    <div >
+      <div class="inline">
+          image {{image}} 
+      </div>
+      <div class="inline">
+          title {{title}} 
+
+          description {{description}} 
+      </div>
+      <div class="inline">
+          price {{price}}
+          location {{location}}
+          <input (click)='Contact()' type="submit" value="Contact">
+          <input (click)='Delete()' type="submit" value="Delete">             
+      </div>
+    </div>
+  </fieldset>
+</body>
+</html>
