--- a/marketangular/src/app/listings/listings.component.html
+++ b/marketangular/src/app/listings/listings.component.html
@@ -1,3 +1,116 @@
-<p>
-  listings works!
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bicycle Marketplace</title>
+</head>
+<body>  
+    <a href="/browse">Browse </a> | <a href="/listings">My Listings </a> | <a href="/">Log Off</a>
+     <br>   
+     <br>
+    <fieldset>
+    <h1>Create Listing</h1>
+    <form (submit)="Create()" #createformData='ngForm'>
+        
+        Title: <input 
+        type="text" 
+        name="title" 
+        required 
+        minlength="3" 
+        [(ngModel)]="camera.title"
+        #createtitle='ngModel'
+        />
+        <span *ngIf=(createtitle.errors) [ngStyle]="{'color': 'red'}"> Give me valid title!</span>
+        <span *ngIf=(createtitle.errors) [ngStyle]="{'color': 'red'}"> {{ createtitle.errors | json }}</span>
+        <br>
+        Description: <input 
+        type="text" 
+        name="description" 
+        required 
+        minlength="3" 
+        maxlength="200"
+        [(ngModel)]="camera.description"
+        #createdescription='ngModel'
+        />
+        <span *ngIf=(createdescription.errors) [ngStyle]="{'color': 'red'}"> Give me valid description!</span>
+        <span *ngIf=(createdescription.errors) [ngStyle]="{'color': 'red'}"> {{ createdescription.errors | json }}</span>
+        <br>
+        <br>
+        Price: <input 
+        type="text" 
+        name="price" 
+        required 
+        minlength="1" 
+        [(ngModel)]="camera.price"
+        #createprice='ngModel'
+        />
+        <span *ngIf=(createprice.errors) [ngStyle]="{'color': 'red'}"> Give me valid price</span>
+        
+        <span *ngIf=(createprice.errors) [ngStyle]="{'color': 'red'}"> {{ createprice.errors | json }}</span>
+        <br>
+        Location: <input 
+        type="text" 
+        name="location" 
+        required 
+        minlength="1" 
+        [(ngModel)]="camera.location"
+        #createlocation='ngModel'
+    />
+        <span *ngIf=(createlocation.errors) [ngStyle]="{'color': 'red'}"> Give me valid location</span>
+        <span *ngIf=(createlocation.errors) [ngStyle]="{'color': 'red'}"> {{ createlocation.errors | json }}</span>
+        <br>
+        image: <input 
+        type="text" 
+        name="image" 
+        required 
+        minlength="1" 
+        [(ngModel)]="camera.image"
+        #createimage='ngModel'
+    />
+        <span *ngIf=(createimage.errors) [ngStyle]="{'color': 'red'}"> Give me valid image</span>
+        <span *ngIf=(createimage.errors) [ngStyle]="{'color': 'red'}"> {{ createimage.errors | json }}</span>
+        <br>
+        <input class='green' [disabled]='createformData.invalid' type="submit" value="Create">
+        </form>
+    </fieldset>
+    <br>
+    <fieldset>
+        <h1>Edit/Delete Listings</h1>
+        <form (submit)="Update()" #formData='ngForm'>
+            Title: <input 
+            type="text" 
+            name="title" 
+            required 
+            minlength="3" 
+            />
+            <br>
+            Description: <input 
+            type="text" 
+            name="description" 
+            required 
+            minlength="3" 
+            maxlength="200"
+            />
+            <br>
+            <br>
+            Price: <input 
+            type="text" 
+            name="price" 
+            required 
+            minlength="1" 
+            />
+            <br>
+            Location: <input 
+            type="text" 
+            name="location" 
+            required 
+            minlength="1" 
+           
+            />
+            <br>
+            <input  type="submit" value="UPDATE">
+            <input  type="submit" value="DELETE">
+        </form>
+    </fieldset>
+  
+</body>
+</html>
