--- a/marketangular/src/app/login/login.component.html
+++ b/marketangular/src/app/login/login.component.html
@@ -4,18 +4,18 @@
   <title>Login</title>
 </head>
   <body>
-    <fieldset>
+    <fieldset *ngFor = "let camera of product">
       <h2>Camera of the day!</h2>
       <div class="inline">
           image {{image}} 
       </div>
       <div class="inline">
-          title {{title}} 
+          title {{camera.title}} 
 
-          description {{description}} 
+          description {{camera.description}} 
       </div>
       <div class="inline">
-          price {{price}}
+          price {{camera.price}}
       </div>
     </fieldset>
     <fieldset class=inline>
